--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         <!-- About Page -->
         <div id="aboutPage" class="bg-grey">
-            <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 lg:mt-20 lg:mb-40">
+            <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 lg:mt-20 lg:mb-40" id="about-page">
                 <div class="text-center">
                     <h1 class="text-4xl font-bold text-gray-900 mb-8">About ROKPA</h1>
                     <div class="max-w-3xl mx-auto">
@@ -244,7 +244,7 @@
     
         <!-- Contact Page -->
         <div id="contactPage" class="bg-grey">
-            <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 lg:mt-20">
+            <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 lg:mt-20" id="contact-page">
                 <div class="max-w-3xl mx-auto">
                     <h1 class="text-4xl font-bold text-gray-900 text-center mb-8">Contact Us</h1>
     
