--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <!-- Employer Portal Card -->
                 <div class="portal-card">
                     <h2 class="text-2xl font-semibold mb-4 text-blue-600" id="portal-card-title">Employer Portal</h2>
-                    <p class="text-gray-600 mb-6" id="portal-card-desc">Find the perfect candidate for your organization for brighter future.</p>
+                    <p class="text-gray-600 mb-6" id="portal-card-desc">Find the perfect candidate for your organization for a brighter future.</p>
                     <button id="employerPortalBtn" class="btn btn-primary w-full">Enter Portal</button>
                 </div>
             </div>
